--- a/InscripcionesServer/.classpath
+++ b/InscripcionesServer/.classpath
@@ -3,5 +3,16 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/InscripcionesRepo"/>
+	<classpathentry kind="lib" path="vendor/mysql/mysql-connector-java-5.1.44-bin.jar"/>
+	<classpathentry kind="lib" path="vendor/hibernate/antlr-2.7.7.jar"/>
+	<classpathentry kind="lib" path="vendor/hibernate/classmate-1.3.0.jar"/>
+	<classpathentry kind="lib" path="vendor/hibernate/dom4j-1.6.1.jar"/>
+	<classpathentry kind="lib" path="vendor/hibernate/hibernate-commons-annotations-5.0.1.Final.jar"/>
+	<classpathentry kind="lib" path="vendor/hibernate/hibernate-core-5.2.10.Final.jar"/>
+	<classpathentry kind="lib" path="vendor/hibernate/hibernate-jpa-2.1-api-1.0.0.Final.jar"/>
+	<classpathentry kind="lib" path="vendor/hibernate/jandex-2.0.3.Final.jar"/>
+	<classpathentry kind="lib" path="vendor/hibernate/javassist-3.20.0-GA.jar"/>
+	<classpathentry kind="lib" path="vendor/hibernate/jboss-logging-3.3.0.Final.jar"/>
+	<classpathentry kind="lib" path="vendor/hibernate/jboss-transaction-api_1.2_spec-1.0.1.Final.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
